[gd_scene load_steps=10 format=2]

[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_Page/Almanac_Page.gd" type="Script" id=1]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/Shared/Background_Gray_3x3.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/BackButtonStandard/PlayerGUI_BackButtonStandard.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 1 )
VScrollBar/styles/grabber_highlight = SubResource( 2 )
VScrollBar/styles/grabber_pressed = SubResource( 3 )
VScrollBar/styles/scroll = SubResource( 4 )
VScrollBar/styles/scroll_focus = SubResource( 5 )

[node name="Almanac_Page" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 960, 540 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="PlayerGUI_BackButtonStandard" parent="." instance=ExtResource( 3 )]
margin_left = 935.0
margin_right = 960.0
margin_bottom = 25.0
size_flags_horizontal = 10
size_flags_vertical = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 930.0
margin_bottom = 510.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 896.0
margin_bottom = 480.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_right = 896.0
margin_bottom = 480.0
theme = SubResource( 6 )

[node name="PageCategoryContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ScrollContainer"]
mouse_filter = 2

[node name="RightSideContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 900.0
margin_right = 900.0
margin_bottom = 480.0

[node name="ScrlContainerForSideData" type="ScrollContainer" parent="MarginContainer/HBoxContainer/RightSideContainer"]
margin_bottom = 480.0

[connection signal="on_button_released_with_button_left" from="PlayerGUI_BackButtonStandard" to="." method="_on_PlayerGUI_BackButtonStandard_on_button_released_with_button_left"]
